objects/DemoAddress__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Demo Address</label>
    <nameField>
        <displayFormat>DADD-{00000}</displayFormat>
        <label>Demo Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>